hphp/hack/test/typecheck/enum_as_class_input.php.rust_elab.exp
File "enum_as_class_input.php", line 12, characters 6-16:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
